Image upload + azure functions

--- a/backend/src/RMotownFestival.Api/appsettings.json
+++ b/backend/src/RMotownFestival.Api/appsettings.json
@@ -2,8 +2,6 @@
 
   "FestivalName": "Blue Note Festival API",
 
-
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,5 +9,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "Storage": {
+    "AccountName": "ekastore",
+    "AccountKey": "",
+    "ConnectionString": "",
+    "ThumbsContainer": "festivalthumbs",
+    "PicturesContainer": "picsin"
+  }
 }
